--- a/src/data/globals.css
+++ b/src/data/globals.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
     font-size: 62.5%;
-    background-color: #303030;
+    background: linear-gradient(to bottom, rgb(50, 50, 50), rgb(35, 35, 35));
     width: 100%;
     height: 100%;
 }
