--- a/src/data/globals.css
+++ b/src/data/globals.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
 html,
 body {
@@ -9,7 +11,7 @@ body {
     font-size: 62.5%;
     background: linear-gradient(to bottom, rgb(50, 50, 50), rgb(35, 35, 35));
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 a {
